--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/Theme.PiedraPapelTijeras"
         tools:targetApi="31">
         <activity
-            android:name=".Menu"
+            android:name=".SplashScreen"
+            android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +23,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".Menu"
+            android:exported="false"/>
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="false"/>
     </application>
 
 </manifest>
